update link to apk and email

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			
 			<div class="col-lg-5 wpr-min wpr-max wpl-max">
 				<div class="shadow">
-				<a href="https://play.google.com/store" class="thumbnail" alt="Heady Kidz PlayStore">
+				<a href="https://play.google.com/store/apps/details?id=heady.kidz" class="thumbnail" alt="Heady Kidz PlayStore">
 				<p align="center">
 					<br>
 					<img src="img/logo-hk.png" alt="Heady Kidz Logo" class="img-responsive">
@@ -235,7 +235,7 @@
 			<div class="col-lg-12">
 			<h4 style="padding-left:20px"><b>Contact</b></h4>
 			<p align="center">
-			Any idea, suggest, complaint, etc. please contact me at marco.chavez@manqostudio.com
+			Any idea, suggest, complaint, etc. please contact me at marcochavezf@gmail.com
 			</p>
 			</div>
 		</div>
